# ocr-mock

./: README.md  main.py  ocr-wrapper-Dockerfile  ollama-ocr-Dockerfile  pyproject.toml  requirements.txt  simple-test.py
openshift/: app-deployment.yaml  kafka-local.yaml
src/ocr-mocking/: config.py  kafka_worker.py  main.py  schemas.py
