[project]
name = "ocr-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "typhoon-ocr>=0.4.1",
    "uvicorn>=0.42.0",
]
